# hands-on-aws-cdk-python-exercises

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: pre-commit  pre-commit.yml  pytest.yml
01-my-first-stack/: README.md
01-my-first-stack/final/: README.md  app.py
01-my-first-stack/final/final/: final_stack.py
01-my-first-stack/final/myfirst/: my_first_stack.py
01-my-first-stack/starter/: README.md
02-custom-construct/final/: app.py
02-custom-construct/final/custom_construct/: custom_construct.py
02-custom-construct/starter/: README.md  app.py  cdk.json
02-custom-construct/starter/custom_construct/: custom_construct.py
03-basic-asset/: README.md
03-basic-asset/final/: app.py
03-basic-asset/final/final/: final_stack.py
03-basic-asset/handler/: handler.py
04-s3-extended/: README.md
04-s3-extended/final/: app.py
04-s3-extended/final/final/: final_stack.py
05-cloudfront-s3/: README.md
05-cloudfront-s3/files/: index.html
05-cloudfront-s3/final/: app.py
05-cloudfront-s3/final/final/: final_stack.py
05-cloudfront-s3/starter/: app.py
05-cloudfront-s3/starter/starter/: final_stack.py
06-gateway-lambda-sqs/: README.md
06-gateway-lambda-sqs/files/consumer/: index.js
06-gateway-lambda-sqs/files/producer/: index.js
07-kinesis/: README.md
07-kinesis/files/: README.md  producer.py  requirements.txt
07-kinesis/final/final/: final_stack.py
08-ecs-task/: README.md
08-ecs-task/files/: Dockerfile  index.html
08-ecs-task/final/: app.py
(+11 files in other folders)
