[tool.poetry]
name = "hands-on-aws-cdk-python-exercises"
version = "0.1.0"
description = ""
authors = ["Ben de Haan <2851705-bdehaan@users.noreply.gitlab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
poetry-plugin-export = "^1.6.0"
python-dotenv = "^1.0.0"
aws-cdk-lib ="^2.130.0"
constructs ="10.3.0"
aws-cdk-aws-kinesisfirehose-alpha = "2.124.0-alpha.0"
aws-cdk-aws-kinesisfirehose-destinations-alpha = "2.124.0-alpha.0"
boto3 = "^1.34.29"
markovclick = "^0.1.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[tool.bandit]
exclude_dirs = ['tests']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
